--- a/recipes/jerkchicken.html
+++ b/recipes/jerkchicken.html
@@ -7,5 +7,23 @@
 </head>
 <body>
     <h1>Jerk Chicken</h1>
+    <img src="" alt="">
+    <h2>This is a recipe for Jerk Chicken.</h2>
+<h3>Ingredients</h3>
+<ul>
+    <li>Garlic</li>
+    <li>Spring Onions</li>
+    <li>All Spice</li>
+    <li>Chilli Powder</li>
+    <li>Ginger</li>
+    <li>Oil</li>
+    <li>Soy Sauce</li>
+    <li>Dark Brown Sugar</li>
+</ul>
+<ol>
+    <li>Add all ingreds to a blender and blend until combined but not smooth</li>
+    <li>Coat chicken thighs in marinade</li>
+    <li>Cook for 30 mins at 160 and 20 mins at 200</li>
+</ol>
 </body>
 </html>
