Link Jerk Chicken recipe to home page

--- a/recipes/jerkchicken.html
+++ b/recipes/jerkchicken.html
@@ -25,5 +25,6 @@
     <li>Coat chicken thighs in marinade</li>
     <li>Cook for 30 mins at 160 and 20 mins at 200</li>
 </ol>
+<a href="../index.html">Back to Home</a>
 </body>
 </html>
